# telegram-gpt

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
telegram_gpt/: bot.py  chat_gpt.py  config.py  schemas.py
