[tool.poetry]
name = "telegram-gpt"
version = "0.1.0"
description = ""
authors = ["penkhasoveg <pen.egor2002@gmail.com>"]
readme = "README.md"
packages = [{ include = "telegram_gpt" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.0"
pydantic = { extras = ["dotenv"], version = "^1.10.5" }
python-telegram-bot = "^20.1"

[tool.poetry.scripts]
start = "telegram_gpt.bot:start_bot"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
